Segunda version del proyecto

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../ethereal batista1/css/estilo.css" />
-    <link rel="icon" type="favicon.ico" href="Img/LOGO.png" />
+    <link rel="stylesheet" href="../Repositorio1/css/estilo.css"/>
+    <link rel="icon" type="favicon.ico" href="../Repositorio1/" />
     <script
       src="https://kit.fontawesome.com/1f8cd39cd8.js"
       crossorigin="anonymous"
@@ -16,7 +16,7 @@
     <header>
       <div class="container__header">
         <div class="Logo">
-          <img src="Img/LOGO.png" alt="" width="100px" />
+          <img src="../Repositorio1/img/LOGO.png" alt="" width="100px" />
         </div>
         <div class="container__nav">
           <nav>
@@ -24,7 +24,7 @@
               <li><a href="#" class="select">Inicio</a></li>
               <li><a href="html/Nosotros.html" class="select">Nosotros</a></li>
               <li>
-                <a href="html/Productos.html" class="select">Productos</a>
+                <a href="html/Producto.html" class="select">Productos</a>
               </li>
               <li>
                 <a href="html/Promociones.html" class="select">Promociones</a>
@@ -62,40 +62,40 @@
 
     <div class="grid-container">
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen1.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen1.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen2.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen2.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen3.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen3.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen4.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen4.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen5.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen5.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen6.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen6.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen7.png" alt="" />
+        <img src="../Repositorio1/img/Imagen7.png" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen8.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen8.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen9.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen9.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen10.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen10.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen11.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen11.jfif" alt="" />
       </div>
       <div class="grid-item">
-        <img src="../ethereal batista1/Img/Imagen12.jfif" alt="" />
+        <img src="../Repositorio1/img/Imagen12.jfif" alt="" />
       </div>
     </div>
     <footer>
